refactor: Code of a lambda to have only one invocation possibly throwing a runtime exception (#499)
Also:
- add comment "expected" in empty catch blocks in tests
- replace Arrays.asList() by List.of()
- simplify assertions
- fix typos / grammar issues in comments
- fix typos in method/class/file names
- remove explicit type arguments where not needed
- rename 'var' variables
- long literals suffix 'l' -> 'L'

Resolves Sonar issues of type java:S5778 Only one method invocation is expected when testing runtime exceptions

related to #88